# BDM_project4

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cleanup-audit.ps1  docker-compose.yml  hw4_notebook.ipynb  pyproject.toml  test-audit.ps1
dags/: rico_pipeline_dag.py
migrations/: 001_init.sql  002_traceability.sql
prompts/: extraction_v1.txt
src/rico_pipeline/: __init__.py  audit.py  config.py  db.py  embed_image.py  embed_text.py  eval_task.py  extract.py  ingest.py  load.py  logging_utils.py  metrics.py  minio_client.py  parse.py  parse_task.py  run_context.py  slack.py  tasks.py
